🆕 feat: Save sorting to settings

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -698,13 +698,17 @@
     "AddVideo": "Add Video"
   },
   "Sort": {
-    "CreateTime": {
-      "Asc": "CreateTime-Asc",
-      "Desc": "CreateTime-Desc"
+    "Time": {
+      "Asc": "Time-Asc",
+      "Desc": "Time-Desc"
     },
-    "DiaryCount": {
-      "Asc": "DiaryCount-Asc",
-      "Desc": "DiaryCount-Desc"
+    "Count": {
+      "Asc": "Count-Asc",
+      "Desc": "Count-Desc"
+    },
+    "Name": {
+      "Asc": "Name-Asc",
+      "Desc": "Name-Desc"
     }
   },
   "Image": {
