♻️ refactor(SponsorPage): Change SponsorPage style and text

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -689,7 +689,7 @@
     },
     "Introduce": {
       "Title": "支持 侠客日记 的开发",
-      "Content": "这个日记App的诞生，源于我自初中起对写日记的热爱。那时，我热衷于捕捉生活中的点滴，用文字记录下那些看似平凡却充满意义的时刻。然而，随着年龄的增长，携带纸笔逐渐变得不便，于是我开始探索电子设备作为新的日记载体。\n\n在市场上众多的日记App中，始终未能找到一款真正符合我心意的产品。这激发了我一个大胆的想法：为何不自己创造一个理想的日记App呢？于是，我开始着手开发这款简洁、高效、便捷的日记应用，力求让每一个热爱写日记的人都能找到归属感。\n\n如果您觉得这个项目为您带来了价值，或者对您的生活有所裨益，那么，我们诚挚地邀请你给予一份支持。您的捐助不仅是对我们工作的肯定，更是对我们不断优化、进步的鼓励。再次感谢您一路的支持与陪伴，愿我们都能在自己的江湖里，成为心中的侠客。"
+      "Content": "为什么做这个日记App？初中的时候，特别喜欢记日记。记一些看起来鸡毛蒜皮、傻里傻气的小事。然而现在，身边也不可能随时随地有纸和笔，就算执笔，也再没有了从前的感觉。写日记这事，也就顺理成章的搬到手机电脑上。\n\n尝试过很多日记App，但总觉得差了点什么。要么一穷二白，像一个记事本；要么无数繁杂的功能，眼花缭乱的界面，不像是写日记，而像是在办公。我想要的，就只是记个日记。简洁就好，方便就好，如果功能切合所需，就更好了。\n\n所以我做了这个日记App，希望每一个热爱写日记的人找回写日记的快乐。如果你觉得它还不错，请给予一份支持与鼓励，帮助我们更好地持续开发和维护这个项目。感谢一路的陪伴，愿我们都能在自己的江湖里，成为心中的侠客。"
     }
   },
   "Statistics": {
