♻️ refactor: editAutoSave can close

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -423,7 +423,8 @@
         },
         "EditAutoSave": {
           "Name": "Auto save",
-          "Path": "Setting / Diary / Auto save"
+          "Path": "Setting / Diary / Auto save",
+          "Close": "Close"
         },
         "Location": {
           "Name": "Location",
