🆕 feat: add AudioCard

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -711,7 +711,9 @@
     },
     "Audio": {
       "Name": "Audio",
-      "NoAudio": "No audio"
+      "NoAudio": "No audio",
+      "Unknown Title": "Unknown Title",
+      "Unknown Artist": "Unknown Artist"
     },
     "Video": {
       "Name": "Video",
