--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -666,7 +666,7 @@
     },
     "Introduce": {
       "Title": "支持 侠客日记 的开发",
-      "Content": "为什么做这个日记App？初中的时候，特别喜欢记日记。记一些看起来鸡毛蒜皮、傻里傻气的小事。然而现在，身边也不可能随时随地有纸和笔，就算执笔，也再没有了从前的感觉。写日记这事，也就顺理成章的搬到手机电脑上。\n\n尝试过很多日记App，但总觉得差了点什么。要么一穷二白，像一个记事本；要么无数繁杂的功能，眼花缭乱的界面，不像是写日记，而像是在办公。我想要的，就只是记个日记。简洁就好，方便就好，如果功能切合所需，就更好了。\n\n所以我做了这个日记App，希望每一个热爱写日记的人找回写日记的快乐。如果你觉得它还不错，请给予一份支持与鼓励，帮助我们更好地持续开发和维护这个项目。感谢一路的陪伴，愿我们都能在自己的江湖里，成为心中的侠客。"
+      "Content": "为什么做这个日记App？初中的时候，特别喜欢记日记。记一些看起来鸡毛蒜皮、傻里傻气的小事。然而现在，身边也不可能随时随地有纸和笔，就算执笔，也再没有了从前的感觉。写日记这事，也就顺理成章的搬到手机电脑上。\n\n尝试过很多日记App，但总觉得差了点什么。要么一穷二白，像一个记事本；要么无数繁杂的功能，眼花缭乱的界面，不像是写日记，而像是在办公。咱就说，有没有一种可能，既简洁明了，又能满足基本需求？\n\n所以，做了这个日记App，想让每一个热爱写日记的人，都能找回写日记的快乐。如果你觉得它还不错，请给予一份支持与鼓励，帮助我们更好地持续开发和维护这个项目。感谢一路的陪伴，愿我们都能在自己的江湖里，成为心中的侠客。"
     }
   },
   "Statistics": {
