🐛 fix: Url error between user agreement and privacy policy

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -582,7 +582,7 @@
   },
   "AgreementAndPolicy": {
     "Title": "User agreement and privacy policy",
-    "Content": "You need to agree to the user agreement and privacy policy before using this app.If you do not agree, we regret that we are unable to provide you with services.\n\nYou can read [user agreement](https://github.com/Yu-Core/SwashbucklerDiary/blob/master/SwashbucklerDiary/wwwroot/docs/user-agreement/en-US.md) and [privacy policy](https://github.com/Yu-Core/SwashbucklerDiary/blob/master/SwashbucklerDiary/wwwroot/docs/privacy-policy/en-US.md) for more information. If you agree, please click\"Agree\"to start our service.",
+    "Content": "You need to agree to the user agreement and privacy policy before using this app.If you do not agree, we regret that we are unable to provide you with services.\n\nYou can read [user agreement](https://raw.githubusercontent.com/Yu-Core/SwashbucklerDiary/master/src/SwashbucklerDiary.Rcl/wwwroot/docs/user-agreement/en-US.md) and [privacy policy](https://raw.githubusercontent.com/Yu-Core/SwashbucklerDiary/master/src/SwashbucklerDiary.Rcl/wwwroot/docs/privacy-policy/en-US.md) for more information. If you agree, please click\"Agree\"to start our service.",
     "Agree": "Agree",
     "Disagree": "Disagree"
   },
