🆕 feat: copy record number

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -256,7 +256,7 @@
       "Sponsor": "Sponsor"
     },
     "Introduction": "An open source, cross-platform local diary app",
-    "Filing number": "APP Filing number: "
+    "Record number": "APP Record number: "
   },
   "FunctionalDescription": "Functional Description",
   "ErrorHandle": {
