--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -256,7 +256,7 @@
       "Sponsor": "捐助"
     },
     "Introduction": "一款开源、跨平台的本地日记APP",
-    "Filing number": "APP备案号："
+    "Record number": "APP备案号："
   },
   "FunctionalDescription": "功能说明",
   "ErrorHandle": {
