♻️ refactor(Setting): Changing the default value of sign

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -162,7 +162,7 @@
   "AppName": "Swashbuckler Diary",
   "Mine": {
     "Mine": "Mine",
-    "Sign": "Hear the barking of dogs at the firewood gate, and return at night in the wind and snow",
+    "Sign": "After the incident, brush off your clothes and hide deep in your name",
     "Data": "Data",
     "Backups": "Backups",
     "Export": "Export",
