--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -162,7 +162,7 @@
   "AppName": "侠客日记",
   "Mine": {
     "Mine": "我的",
-    "Sign": "柴门闻犬吠，风雪夜归人",
+    "Sign": "事了拂衣去，深藏身与名",
     "Data": "数据",
     "Backups": "备份",
     "Export": "导出",
