🆕 feat: Add image lazy loading settings

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -398,6 +398,10 @@
           "Name": "Auto save",
           "Path": "Setting / Diary / Auto save",
           "Close": "Close"
+        },
+        "ImageLazy": {
+          "Name": "Image lazy",
+          "Path": "Setting / Diary / Image lazy"
         }
       },
       "Alert": {
