--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -398,6 +398,10 @@
           "Name": "自动保存",
           "Path": "设置 / 日记 / 自动保存",
           "Close": "关闭"
+        },
+        "ImageLazy": {
+          "Name": "图片懒加载",
+          "Path": "设置 / 日记 / 图片懒加载"
         }
       },
       "Alert": {
