--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -734,5 +734,10 @@
       "SubTitle": "进入隐私模式时启用深色模式"
     },
     "Description": "隐私模式只适用于日记，不适用于标签、位置、文件等内容"
+  },
+  "SponsorSupport": {
+    "Name": "支持一下",
+    "Content": "如果你觉得此软件还不错的话，可以捐助支持一下。你的支持就是开发者最大的动力。",
+    "To support": "捐助"
   }
 }
