--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -404,6 +404,14 @@
         "ImageLazy": {
           "Name": "图片懒加载",
           "Path": "设置 / 日记 / 图片懒加载"
+        },
+        "FirstLineIndent": {
+          "Name": "首行缩进",
+          "Path": "设置 / 日记 / 首行缩进"
+        },
+        "CodeLineNumber": {
+          "Name": "代码行号",
+          "Path": "设置 / 日记 / 代码行号"
         }
       },
       "Alert": {
