--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -660,6 +660,10 @@
       "Content": "Why do you make this diary app? In junior high school, I particularly enjoyed keeping diaries. Remember some seemingly trivial and silly things. However, nowadays, it is impossible to have paper and pens around me anytime and anywhere. Even if I hold a pen, I no longer have the feeling of the past. Writing a diary is naturally moved to a mobile phone or computer.\n\nI have tried many diary apps, but I always feel like something is missing. Either one is poor and two are poor, like a notebook; Either with countless complex functions and dazzling interfaces, it's not like writing a diary, but like working in an office. Let's just say, is there a possibility that is both concise and clear, and can meet basic needs?\n\nSo I created this diary app, hoping that everyone who loves writing diaries will find the joy of writing diaries. If you think it's good, please provide support and encouragement to help us better continue developing and maintaining this project. Thank you for accompanying us all the way. May we all become the swashbuckler we want to be in our own JiangHu."
     }
   },
+  "SponsorList": {
+    "Name": "Sponsor list",
+    "Text": "Thank you to the following swashbucklers for their donations"
+  },
   "Statistics": {
     "Name": "Statistics",
     "DiaryCount": "Diaries",
