🆕 feat(Markdown): Task list line-through

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -418,6 +418,10 @@
         "CodeLineNumber": {
           "Name": "Code line number",
           "Path": "Setting / Diary / Code line number"
+        },
+        "TaskListLineThrough": {
+          "Name": "Task list line-through",
+          "Path": "Setting / Diary / Task list line-through"
         }
       },
       "Snackbars": {
