🆕 feat: Select tags dialog and Select location dialog to add search

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -27,7 +27,8 @@
     "SaveSuccess": "Save success",
     "SaveFail": "Save fail",
     "Sort": "Sort",
-    "NotSupported": "Platform Not Supported"
+    "NotSupported": "Platform Not Supported",
+    "Search": "Search"
   },
   "Main": {
     "Diary": "Diary",
