🆕 feat: Diary card display tags

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -387,6 +387,10 @@
           "Name": "Icon",
           "Path": "Setting / Diary card / Card icon"
         },
+        "Tags": {
+          "Name": "Tags",
+          "Path": "Setting / Diary card / Card tags"
+        },
         "DateFormat": {
           "Name": "Date format",
           "Path": "Setting / Diary card / Date format"
