--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -387,6 +387,10 @@
           "Name": "图标",
           "Path": "设置 / 日记卡片 / 图标"
         },
+        "Tags": {
+          "Name": "标签",
+          "Path": "设置 / 日记卡片 / 标签"
+        },
         "DateFormat": {
           "Name": "日期格式",
           "Path": "设置 / 日记卡片 / 日期格式"
