♻️ refactor(NavigateController): Optimize navigation logic

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/en-US.json
@@ -4,5 +4,6 @@
     "new-content-available": "New content is available. Click Refresh to update.",
     "ignore": "Ignore",
     "refresh": "Refresh"
-  }
+  },
+  "Returning again will exit the application": "Returning again will exit the application"
 }
