--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/zh-CN.json
@@ -5,5 +5,8 @@
     "ignore": "忽略",
     "refresh": "刷新"
   },
-  "Returning again will exit the application": "再返回一次将退出应用"
+  "Returning again will exit the application": "再返回一次将退出应用",
+  "Something went wrong": "出了点意外",
+  "This could be a browser cache issue. Refresh and try again, or manually hard reload (<kbd>Ctrl+F5</kbd> for Windows, <kbd>Command+Shift+R</kbd> for macOS).": "可能是浏览器缓存的问题。刷新并重试，或手动强制刷新 （<kbd>Ctrl+F5</kbd> 对于Windows， <kbd>Command+Shift+R</kbd> 对于macOS）。",
+  "Force refresh": "强制刷新"
 }
