--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -398,9 +398,9 @@
           "Name": "标签",
           "Path": "设置 / 日记卡片 / 标签"
         },
-        "DateFormat": {
-          "Name": "日期格式",
-          "Path": "设置 / 日记卡片 / 日期格式"
+        "TimeFormat": {
+          "Name": "时间格式",
+          "Path": "设置 / 日记卡片 / 时间格式"
         }
       },
       "Diary": {
@@ -658,7 +658,11 @@
   },
   "DateTimeFormat": {
     "MM/dd": "月/日",
-    "yyyy/MM/dd": "年/月/日"
+    "yyyy/MM/dd": "年/月/日",
+    "MM/dd HH:mm": "月/日 时:分",
+    "yyyy/MM/dd HH:mm": "年/月/日 时:分",
+    "MM/dd HH:mm dddd": "月/日 时:分 星期",
+    "yyyy/MM/dd HH:mm dddd": "年/月/日 时:分 星期"
   },
   "Please input DeviceName": "请输入设备名",
   "Please input ScanPort": "请输入扫描端口",
